navbar design change

--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -92,11 +92,11 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/role_icon.jpg" alt="" height="100" width="100" align="middle">
+                    <img src="/assets/chart-icon.png" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5> Grafici </h5>
-                    <p> Opis grafika </p>
+                    <p> Omogućeno pregledanje grafika vezanih za administraciju i upravljanje. </p>
                     </div>
             </div>
             </div>
