--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,3 @@
-
 /*
 = require bootstrap
 *= require bootstrap-datetimepicker
@@ -447,90 +446,56 @@ a {
 /*end of design for introduction section*/
 
 /*design for navigation bar*/
-.navbar-toggle {
-  display: none;
-  position: relative;
-  float: right;
-  margin-right: 15px;
-  padding: 9px 10px;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  background-color: transparent;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
+
+
+.ribbon span {
+    background:transparent;
+    display:inline-block;
+    line-height:3em;
+    padding:0 1em;
+    margin-top:0.5em;
+    position:relative;
+
+    -webkit-transition: background-color 0.2s, margin-top 0.2s;  /* Saf3.2+, Chrome */
+    -moz-transition: background-color 0.2s, margin-top 0.2s;  /* FF4+ */
+    -ms-transition: background-color 0.2s, margin-top 0.2s;  /* IE10 */
+    -o-transition: background-color 0.2s, margin-top 0.2s;  /* Opera 10.5+ */
+    transition: background-color 0.2s, margin-top 0.2s;
 }
-.navbar-collapse.collapse {
-  display: block!important;
-  height: auto!important;
-  padding-bottom: 0;
-  overflow: visible!important;
+
+.ribbon a:hover span {
+    
+    margin-top:0;
 }
-.navbar-collapse{
-  margin-right: 0;
-  margin-left: 0;
-  padding-left: 0;
-  padding-right: 0;
-  width: auto;
-  border-top: 0;
-  box-shadow: none;
-  max-height: 340px;
+.nblue{
+  background-color:#006dcc !important;
+  
 }
-.navbar-right {
-  float: right!important;
+.nblue a{
+  color:white !important;
 }
-.navbar {
-  padding: 20px 0;
-  border-bottom: 0;
-  letter-spacing: 1px;
-  background: 0 0;
-  transition: background .5s ease-in-out,padding .5s ease-in-out;
-  }
-.container {
-  width: 1170px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+.nblue a:hover{
+  color:#0B0080 !important;
 }
-.navbar-fixed-top {
-  top: 0;
-  border-width: 0 0 1px;
-  position: fixed;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-    border-radius: 0;
-}
-.navbar-brand h1 {
-  font-size: 20px;
-  line-height: 40px;
-}
-.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
-  margin-left: -15px;
-}
-.navbar-brand {
-  height: 40px;
-  padding: 5px 15px;
-  font-size: 18px;
-  line-height: 1em;
-  font-weight: 700;
-  float: left;
+.navbar-brand:hover{
+  background-color:#006dcc !important;
 }
 /*end of design for navigation bar*/
 
 /*design for home titles*/
 h1.naslov1{
-  text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
   position:absolute;
   top:10px;
-  left:202px;
+  left:180px;
+  border: 2px solid white;
+  padding:30px;
+  background-color:#006dcc !important;
 }
 #main-title{
   position:absolute;
-  top:60px;
+  top:80px;
   left:202px;
   color:#666;
 }
