--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -1,29 +1,9 @@
 	<h1 style="text-align:center;"> Dijagrami </h1><br>
 	<div ng-controller="ChartsController">
 		<div class="row">
-			<div class="col-lg-3 col-md-3">
+			<div class="col-lg-4 col-md-4">
 			<h2> Feedback </h2><br>
-			  <nvd3 options="options_pie"
-			      data="data_pie"
-			      config="config_pie">
-			   </nvd3>
-			</div>
-			<div class="col-lg-3 col-md-3">
-			  <nvd3 options="options"
-			      data="data"
-			      config="config">
-			   </nvd3>
-			</div>
-			<div class="col-lg-3 col-md-3">
-			 <nvd3 options="options"
-			      data="data"
-			      config="config">
-			   </nvd3>
-			</div>
-			<div class="col-lg-3 col-md-3">
-			  <nvd3 options="options"
-			      data="data"
-			      config="config">
+			  <nvd3 options="options_pie" data="data_pie">
 			   </nvd3>
 			</div>
 		</div>
