--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -6,5 +6,11 @@
 			  <nvd3 options="options_pie" data="data_pie">
 			   </nvd3>
 			</div>
+			<div class="col-lg-6 col-md-6">
+			   <h2> Category </h2><br>
+			   <nvd3 options="options_multibar" data="data_multibar">
+			   </nvd3>
+			 </div>
 		</div>
 	</div>
+
