design change (color shemes)

--- a/app/assets/javascripts/templates/resources.html.erb
+++ b/app/assets/javascripts/templates/resources.html.erb
@@ -3,7 +3,7 @@
   {{ 'SEARCH' | translate }} <input ng-model="query" class="form-control">
 </div>
 
-
+<a ng-href="/#/questions/{{question_id}}/new_resource" class="btn btn-common">New Resource</a>
 </br></br>
 <table class="table table-hover table-condensed tabela" ng-controller="ResourcesCtrl">
     <thead>
