--- a/app/assets/javascripts/templates/new_category.html.erb
+++ b/app/assets/javascripts/templates/new_category.html.erb
@@ -1,11 +1,11 @@
-<body>
+<div>
+  <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{ alert.msg }}</alert>
+</div>
 	<div class="container"> 
 	<div class="bcg" style="height:600px">   
 	    <div class="category-wall">
 			<form class="form-register" name="myForm" ng-controller="CreateCategoryController">
-
 			  	<h1 class="text-center login-title"> Unos kategorije </h1>
-
 			  	<!-- input name-->
 			  	<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-user"></i></span>
@@ -16,7 +16,6 @@
 						<span ng-show="myForm.name.$error.required">Unos imena je obavezan.</span>Ime mora sadržavati više od 3 karaktera.
 					</span>	
 			    </div>
-
 				<!-- input job-->
 				<div class="input-prepend">
 	      			<span class="add-on"><i class="icon-briefcase"></i></span>
@@ -35,4 +34,3 @@
 		</div>
 	</div>
 	<div id="copyright">© Copyright 2015</div>
-</body>
