#added chart for comments on questions

--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -12,5 +12,12 @@
 			   </nvd3>
 			 </div>
 		</div>
+		<div class="row">
+			 <div class="col-lg-4 col-md-4">
+			   <h2> Comment </h2><br>
+			   <nvd3 options="options_discretebar" data="data_discretebar">
+			   </nvd3>
+			 </div>
+		</div>
 	</div>
 
