new_resource design

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -644,6 +644,14 @@ h1.naslov1{
   padding: 20px;
   width:800px;
 }
+/*design for resources*/
+.resources {
+  background: #f9f9f9;
+  padding: 20px;
+  width:400px !important;
+}
+
+/*end of design for resources*/
 .col-md-6 {
   width: 50%;
   float: left;
