--- a/app/assets/javascripts/templates/new_resource.html.erb
+++ b/app/assets/javascripts/templates/new_resource.html.erb
@@ -1,11 +1,25 @@
-<div class="container">
+<div classs="container">
   <div class="row">
-  </div>
+       <div class="col-lg-4">
+       </div>
+       <div class="col-lg-4">
+                <div class="boxed-grey resources">
+	                <form class="form" ng-submit="upload()">
+		                <div class="row">
+	                        <div class="col-md-12">
+	                            <div class="form-group">
+	                                <input type="file" nv-file-select uploader="uploader"/>
+	                            </div>
+					      		<div class="col-md-12">
+	                            	<button type="submit" class="btn btn-primary">Upload</button>
+	                        	</div>
+					  		</div>
+	                    </div>
+				    </form>
+				</div>
+		</div>
+	</div>
+</div>
+ 
 
-  <div class="col-md-9">
-    <form class="form" ng-submit="upload()">
-      <input type="file" nv-file-select uploader="uploader"/><br/>
-      <button type="submit" class="btn btn-primary">Upload</button>
-    </form>
-  </div>
-</div> 
+<div id="copyright">© Copyright 2015</div>
