--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -19,5 +19,12 @@
 			   </nvd3>
 			 </div>
 		</div>
+		<div class="col-lg-8 col-md-8">
+			   <h2> Questions during history </h2><br>
+			   <nvd3 options="options_historical" data="data_historical">
+			   </nvd3>
+			 </div>
+		</div>
+
 	</div>
 
