--- a/app/assets/javascripts/templates/questions.html.erb
+++ b/app/assets/javascripts/templates/questions.html.erb
@@ -1,4 +1,7 @@
 <div classs="container"  ng-controller="QuestionsController">
+<div>
+  <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">{{ alert.msg }}</alert>
+</div>
     </br></br>
     <div class="pretraga">
       Pretraga: <input ng-model="query" class="form-control">
