#added reservation apointments from patient

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -689,6 +689,9 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
   border: 1px solid #eee;
   box-shadow: none;
 }
+#reservation-form{
+  margin-bottom:100px;
+}
 #contact-form{
   margin-bottom:50px;
 }
