--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -959,3 +959,21 @@ animation-timing-function:ease-out
   z-index: -1;   
 }
 /*end of edit user by manager*/
+/*form new category*/
+.new-category-wall
+{
+
+    padding: 10px 0px 10px 0px;
+    
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -200px;
+    
+    margin-top: -200px;
+    width: 400px;
+    height: 200px;
+
+}
+/*end of formn new category*/
