doctors on home page

--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -337,6 +337,50 @@ h2{
     -->
     <!-- /.orders form-->
 
+    <!--doctors-->
+            <div class="heading-contact-title">
+                <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="section-heading">
+                        <h2 class="revealOnScroll" data-animation="lightSpeedIn">{{ 'DOCTORS' | translate }}</h2>
+                        <i class="fa fa-2x fa-angle-down"></i>
+                        </div>   
+                    </div>
+                </div>
+                </div>
+            </div>
+
+    <div class="team boxed-greyy col-md-4">
+        <div class="inner">
+            <h5>Doktor 1</h5>
+            <p class="subtitle">Ginekolog</p>
+            <div class="avatar"><img src="assets/d1.jpg" alt="" class="img-responsive img-circle" align="middle"></div>
+        </div>
+    </div>
+    <div class="team boxed-greyy col-md-4">
+        <div class="inner">
+            <h5>Doktor 2</h5>
+            <p class="subtitle">Onkolog</p>
+            <div class="avatar"><img src="assets/d2.jpg" alt="" class="img-responsive img-circle" align="middle"></div>
+        </div>
+    </div>
+    <div class="team boxed-greyy col-md-4">
+        <div class="inner">
+            <h5>Doktor 3</h5>
+            <p class="subtitle">Neurolog</p>
+            <div class="avatar"><img src="assets/d3.jpg" alt="" class="img-responsive img-circle" align="middle"></div>
+        </div>
+    </div>
+    <div class="team boxed-greyy col-md-4">
+        <div class="inner">
+            <h5>Doktor 4</h5>
+            <p class="subtitle">Kardiolog</p>
+            <div class="avatar"><img src="assets/d4.jpg" alt="" class="img-responsive img-circle" align="middle"></div>
+        </div>
+    </div>
+    <!-- /.doctors-->
+
     <!--feedback form-->
     <div class="heading-contact-title">
                 <div class="container">
