--- a/app/assets/javascripts/templates/home_admin.html.erb
+++ b/app/assets/javascripts/templates/home_admin.html.erb
@@ -30,7 +30,7 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/group.png" alt="" height="100" width="100" align="middle">
+                    <img class="homeadminimg" src="/assets/group.png" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5>{{ 'USRMNG' | translate }}</h5>
@@ -45,7 +45,7 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/feedback-icon.png" alt="" height="100" width="100" align="middle">
+                    <img class="homeadminimg" src="/assets/feedback-icon.png" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5>{{ 'FEEDBACKMNG' | translate }}</h5>
@@ -60,7 +60,7 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/category.png" alt="" height="100" width="100" align="middle">
+                    <img class="homeadminimg" src="/assets/category.png" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5>{{ 'CATEGORYMNG' | translate }}</h5>
@@ -75,7 +75,7 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/role_icon.jpg" alt="" height="100" width="100" align="middle">
+                    <img class="homeadminimg" src="/assets/role_icon.jpg" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5>{{ 'USRROLE' | translate }}</h5>
@@ -92,7 +92,7 @@
             <div class="wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible;-webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
             <div class="service-box">
                 <div class="service-icon">
-                    <img src="/assets/chart-icon.png" alt="" height="100" width="100" align="middle">
+                    <img class="homeadminimg" src="/assets/chart-icon.png" alt="" height="100" width="100" align="middle">
                 </div>
                 <div class="service-desc">
                     <h5> Grafici </h5>
