--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -726,7 +726,7 @@ form#contact-form input, form#contact-form select, form#contact-form textarea {
 .service-icon {
   margin-bottom: 20px;
 }
-img {
+.homeadminimg {
   vertical-align: middle;
   display: block;
     margin-left: auto;
@@ -977,3 +977,40 @@ animation-timing-function:ease-out
 
 }
 /*end of formn new category*/
+/*home page doctors*/
+.img-circle {
+  border-radius: 50%;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.img-responsive {
+  display: block;
+  max-width: 100%;
+  height: 200px;
+  width:200px;
+}
+.avatar {
+  margin-bottom: 20px;
+}
+.boxed-greyy {
+  background: #f9f9f9;
+  padding: 20px;
+}
+.team h5 {
+  margin-bottom: 10px;
+}
+.team p.subtitle {
+  margin-bottom: 10px;
+}
+.col-md-4 {
+  text-align: center;
+  width: 20%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left:50px;
+}
+/*end of home page doctors*/
