--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -265,11 +265,12 @@ h2{
                                 {{ 'DOCTOR' | translate }}
                             </label>
                             <div class="input-group">
-                                <!--<span class="add-on"><i class="icon-envelope"></i></span>-->
-                                <!--<input type="text" class="formf-control" required="required" ng-model="reservation.user_doctor_id" placeholder="Enter doctor's ID, TBD name'.">-->
                                 <label class="control-label" for="inputSuccess4"></label>
                                 <select class="form-control" ng-model="user" ng-options="user.name for user in users | filter:{role_id:2} track by user.id " required id="inputSuccess4"></br></br>
                                 </select>
+                                <label for="user.job">
+                                {{ 'PROFESSION' | translate }}: {{user.job}}
+                                </label>
                             </div>
                         </div>
                         <div class="row">
@@ -300,7 +301,7 @@ h2{
                         <div class="form-group">
                             <label for="description">
                                 {{ 'DSC' | translate }}</label>
-                            <textarea name="message" ng-model="reservation.description" class="formf-control" rows="9" cols="25" required="required" placeholder="Message"></textarea>
+                            <textarea name="message" ng-model="reservation.description" class="formf-control" rows="9" cols="25" required="required" placeholder="Description"></textarea>
                         </div>
                     </div>
                     <div class="col-md-12">
