--- a/app/assets/javascripts/templates/doctor.html.erb
+++ b/app/assets/javascripts/templates/doctor.html.erb
@@ -11,7 +11,7 @@
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
               <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="#/home_admin">
+        <a class="navbar-brand" href="#/doctor">
            <h1 class="naslov1">eSAVJETOVALISTE</h1>
         </a>
           </div>
