--- a/app/assets/javascripts/templates/home.html.erb
+++ b/app/assets/javascripts/templates/home.html.erb
@@ -221,16 +221,42 @@ h2{
     <!-- /.image slider-->
 
     <!--advice form-->
-    <div class="heading-contact-title">
+    <div class="heading-contact-title" style="text-align: left;">
                 <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="section-heading">
+                    <div class="col-lg-10 col-lg-offset-1">
+                        <div class="section-heading" style="text-align:center;">
                         <h2 class="revealOnScroll" data-animation="lightSpeedIn">{{ 'AHEAD' | translate }}</h2>
                         <i class="fa fa-2x fa-angle-down"></i>
-                        </br>  
-                            <div style="text-align:center;" ng-controller="QuestionsController"> Otvorite stranicu sa već postavljenim pitanjima 
-                                <a href ng-click="openQuestions()">OVDJE</a>. 
+                        </br>  </div>
+                        <br>
+                            <div ng-controller="QuestionsController"> 
+                                        <div class="list-group">
+                                          <div class="list-group-item active">
+                                              <div class="row">
+                                                <div class="col-lg-8 col-md-8">Najpopularnije teme</div>
+                                                <div class="col-lg-2 col-md-2" style="text-align:center;">Kategorija</div>
+                                                <div class="col-lg-2 col-md-2" style="text-align:center;">Odgovori</div>
+                                              </div>
+                                          </div>
+                                          <a href ng-click="showQuestion(question.id)" class="list-group-item" ng-repeat="question in top_questions | filter:query">
+                                           <div class="row">
+                                               <div class="col-lg-8 col-md-8">
+                                                    <h4 class="list-group-item-heading"> {{question.name}}</h4>
+                                                    <p class="list-group-item-text" style="font-size:11px;margin-top:10px;"><span class="glyphicon glyphicon-pencil"></span> 
+                                                    {{ question.user.name}} {{ question.user.surname}} &nbsp&nbsp&nbsp
+                                                    <span class="glyphicon glyphicon-time"></span> {{ question.time_created }}
+                                                    <br>
+                                                </div>
+                                                <div class="col-lg-2 col-md-2" style="text-align:center;"> {{ question.category.name }} </div>
+                                                <div class="col-lg-2 col-md-2" style="text-align:center;"> {{question.number_of_comments}}</div>
+                                            </div>
+                                          </a>
+                                    </div><br>
+                                <p style="text-align:center;">
+                                    Otvorite stranicu sa svim postavljenim pitanjima
+                                <a href ng-click="openQuestions()">OVDJE</a>.
+                                </p> 
                             </div>
                          </br>
                         </div>   
