--- a/app/assets/javascripts/templates/role_admin.html.erb
+++ b/app/assets/javascripts/templates/role_admin.html.erb
@@ -24,7 +24,7 @@
         <td> {{role.description}}</td>
         <td>
           <div class="actions"> 
-            <button class="btn btn-primary btn-usr-mng" ng-click="updateUser(stock.id, $index)"  ng-disabled="myForm.$invalid">Izmijeni</button>
+          <button class="btn btn-primary" ng-controller="UpdateRoleControler" ng-click="updateRoleRead()"  ng-disabled="myForm.$invalid">Izmijeni</button>
           </div>
           <div class="actions" >
             <button class="btn btn-primary btn-usr-mng" ng-click="deleteRole(role.id, $index)"  ng-disabled="myForm.$invalid">Obriši</button>
