#Changes on eservation appointments. Added some navbars

--- a/app/assets/javascripts/templates/sestra.html.erb
+++ b/app/assets/javascripts/templates/sestra.html.erb
@@ -33,6 +33,7 @@
   {{ 'SORT' | translate }}
   <select ng-model="orderProp" class="form-control">
     <option value="user_patient_id">Pacijent</option>
+    <option value="appointment_date">Datum rezervacije</option>
     <option value="user_doctor_id">Doktor</option>
   </select>
   {{ 'SEARCH' | translate }} <input ng-model="query" class="form-control">
@@ -84,6 +85,5 @@
             </div>
         </div>
 </br></br>
-
-<div id="copyright">© Copyright 2015</div>
 -->
+<div id="copyright">© Copyright 2015</div>
