--- a/app/assets/javascripts/templates/charts.html.erb
+++ b/app/assets/javascripts/templates/charts.html.erb
@@ -1,3 +1,4 @@
+<div class="navbar" navbar></div>
 	<h1 style="text-align:center;"> Dijagrami </h1><br>
 	<div ng-controller="ChartsController">
 		<div class="row">
