--- a/app/assets/javascripts/templates/doctor.html.erb
+++ b/app/assets/javascripts/templates/doctor.html.erb
@@ -11,14 +11,13 @@
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
               <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="#/doctor">
+        <a class="navbar-brand" href="#/sestra">
            <h1 class="naslov1">eSAVJETOVALISTE</h1>
         </a>
           </div>
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse navbar-font">
            <ul class="nav navbar-nav navbar-font">
            <li class="active"><a href><span>{{ "ORDERS" | translate }}</span></a></li>
-           <li><a href><span>{{ "QUESTIONS" | translate }}</span></a></li>
           <li><a href ng-click="openChangePass()"><span>{{ "CHANGE_PASS" | translate }}</span></a></li>
          <li><a href ng-click="logout()"><span>{{ "LOGOUT" | translate }}</span></a></li>
             </ul>
@@ -27,7 +26,46 @@
    </nav>
 <!--/.navbar-->
 
-</br></br></br>
+</br>
+</br></br>
+</br></br>
+<div class="pretraga">
+  {{ 'SORT' | translate }}
+  <select ng-model="orderProp" class="form-control">
+    <option value="user_patient_id">Pacijent</option>
+    <option value="appointment_date">Datum rezervacije</option>
+    <option value="user_doctor_id">Doktor</option>
+  </select>
+  {{ 'SEARCH' | translate }} <input ng-model="query" class="form-control">
+  </br>
+</div>
+
+
+</br></br>
+<table class="table table-hover table-condensed tabela" ng-controller="SearchReservationsControler">
+    <thead>
+        <tr>
+            <th>Pacijent</th>
+            <th>Doktor</th>
+            <th>Kad bi da se lijeci</th>
+            <th>Opis</th>
+            <th>Status</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="reservation in reservations | filter:query | orderBy:orderProp">
+        <td> {{reservation.user_patient_id}}</td>
+        <td> {{reservation.user_doctor_id}}</td>
+        <td> {{reservation.appointment_date}}</td>
+        <td> {{reservation.description}}</td>
+        <td> {{reservation.status}}</td>
+        <td>
+          
+        </td>
+      </tr>
+
+</table>
+<!--
 <div class="heading-contact-title">
             <div class="container">
             <div class="row">
@@ -44,5 +82,5 @@
             </div>
         </div>
 </br></br>
-
+-->
 <div id="copyright">© Copyright 2015</div>
